--- a/source/layout.erb
+++ b/source/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
+    <title>writelesscode<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/pygments/css/default.css" rel="stylesheet">
@@ -12,9 +12,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1><a href="/">writelesscode</a><span class="small"> by <a href="https://twitter.com/mxgrn">Max Gorin</a></span></h1>
+          <h1><a href="/">writelesscode</a></h1>
           <p class="lead text-muted">
-            On webdev, productivity, and nomadic lifestyle
+            Rails, Ext JS, Netzke and other stuff
           </p>
         </div>
 
