--- a/source/layout.erb
+++ b/source/layout.erb
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col-lg-12">
           <hr>
-          © <%= Date.today.year %> Max Gorin | Ama et fac quod vis
+          © <%= Date.today.year %> Max Gorin | Ama et fac quod vis | <a href="http://feeds.feedburner.com/writelesscode">RSS</a>
         </div>
       </p>
     </footer>
