Update linkedin link

--- a/source/layout.erb
+++ b/source/layout.erb
@@ -27,7 +27,7 @@
             <img class="img-circle" width=75 height=75 src="/images/mxgrn.png"/>
             <h4>Max Gorin</h4>
             <p>Digital nomad, web-developer, entrepreneur, author of <a href="http://netzke.org">Netzke</a>, speaker, and founder of <a href="http://goodbitlabs.com">Good Bit Labs</a>.</p>
-            <p><a href="https://twitter.com/mxgrn">Twitter</a> | <a href="https://github.com/mxgrn">GitHub</a> | <a href="www.linkedin.com/in/mxgrn">LinkedIn</a></p>
+            <p><a href="https://twitter.com/mxgrn">Twitter</a> | <a href="https://github.com/mxgrn">GitHub</a> | <a href="http://www.linkedin.com/in/mxgrn">LinkedIn</a></p>
           </div>
 
           <h3>Recent Articles</h3>
