--- a/source/layouts/post.html.erb
+++ b/source/layouts/post.html.erb
@@ -1,5 +1,5 @@
 <% wrap_layout :layout do %>
-  <h1><%= current_article.title %> <span class="small"><%= current_article.date.strftime("%B %e, %Y") %></span></h1>
+  <h2><%= current_article.title %><br><span class="small"><%= current_article.date.strftime("%B %e, %Y") %></span></h2>
   <%= yield %>
   <%= disqus %>
 <% end %>
